fix(styles): missing padding variable for offset elements

--- a/_app/assets/themes/curtana/_less/common.less
+++ b/_app/assets/themes/curtana/_less/common.less
@@ -279,7 +279,7 @@ body:hover .latest {
     }
 
     > p {
-      padding-left: .8em;
+      padding-left: @space-xs;
       border-left: @border-default solid;
       // TODO: Need better solution
       // We will reset the common margin-bototm to get gapless borders for blockquotes
@@ -509,7 +509,7 @@ body:hover .latest {
 .note,
 .store,
 .download {
-  padding-left: .8em;
+  padding-left: @space-xs;
   margin-left: calc(-@space-xs - @border-default);
   border-left: @border-default solid @link-color;
 
